Fix border collapse on subpages

--- a/app/pages/PrivacyPolicyPage.module.scss
+++ b/app/pages/PrivacyPolicyPage.module.scss
@@ -28,10 +28,12 @@
 .content {
     max-width: 800px;
     width: 88%;
-    margin: 3em auto 6em;
+    margin: 3em auto 0;
+    padding-bottom: 4em;
 
     @media (max-width: 768px) {
-        margin: 2em auto 4em;
+        margin: 2em auto 0;
+        padding-bottom: 2em;
     }
 
     section {
